<resources>
    <string name="app_name">""</string>
    <string name="view_my_contacts">VIEW MY CONTACTS</string>
    <string name="settings">Settings</string>
    <string name="person_name">Lucile Alvarado</string>
    <string name="profession_name">Graphic designer</string>
    <string name="residence_address">5295 Gaylord Walks Apk. 110</string>
    <string name="lets_get_acquainted">Let\'s get acquainted</string>
    <string name="fill_out_the_profile">Fill out the profile and go to the application!</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="copyright">By clicking Register you agree\nto our Terms and Conditions</string>
    <string name="remember_me">Remember me</string>
    <string name="element_text" />
    <string name="contacts">Contacts</string>
    <string name="exit_from_this_activity">button to exit this activity</string>
    <string name="search_button">search button</string>
    <string name="add_contacts">Add contacts</string>
    <string name="select">Select</string>
    <string name="add_contact_username">Username</string>
    <string name="save">SAVE</string>
    <string name="add_contact">Add contact</string>
    <string name="career">Career</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="hardcoded_email">evgeniiorlov@gmail.com</string>
    <string name="username">Username</string>
    <string name="hardcoded_phone_number">123123</string>
    <string name="address">Address</string>
    <string name="hardcoded_birthdate">01/01/0001</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_person_name">Some Name</string>
    <string name="default_profession_name">Some Profession</string>
    <string name="default_residence_address">Some Address</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="invalid_birthdate">Invalid birthdate, ex: 01/01/2021</string>
    <string name="empty_field">This field should not be empty</string>
    <string name="invalid_phone_number">Invalid phone number, ex: (264)-654-3762</string>
    <string name="invalid_email">Invalid Email address, ex: abc@example.com</string>
    <string name="loading_data_error_message">Can\'t load data</string>
    <string name="removed_contact_message">Contact has been removed</string>
    <string name="user1_profession">Community worker</string>
    <string name="user2_profession">Estate agent</string>
    <string name="user3_profession">Pilot</string>
    <string name="user4_profession">Dentist</string>
    <string name="user5_profession">Clockmaker</string>
    <string name="user6_profession">Barrister</string>
    <string name="user7_profession">Auctioneer</string>
    <string name="user8_profession">Printer</string>
    <string name="user9_profession">Comedian</string>
    <string name="user10_profession">Car dealer</string>
    <string name="user1_name">Darcy Benn</string>
    <string name="user2_name">Tatiana Matthewson</string>
    <string name="user3_name">Zandra Bailey</string>
    <string name="user4_name">Eliot Stevenson</string>
    <string name="user5_name">Mina Derrickson</string>
    <string name="user6_name">Gyles Breckinridge</string>
    <string name="user7_name">Sharlene Horsfall</string>
    <string name="user8_name">Milton Bryson</string>
    <string name="user9_name">Allissa Tindall</string>
    <string name="user10_name">Frannie Morriss</string>
    <string name="user1_email">\@name1.surname@gmail.com</string>
    <string name="user2_email">\@name2.surname@gmail.com</string>
    <string name="user3_email">\@name3.surname@gmail.com</string>
    <string name="user4_email">\@name4.surname@gmail.com</string>
    <string name="user5_email">\@name5.surname@gmail.com</string>
    <string name="user6_email">\@name6.surname@gmail.com</string>
    <string name="user7_email">\@name7.surname@gmail.com</string>
    <string name="user8_email">\@name8.surname@gmail.com</string>
    <string name="user9_email">\@name9.surname@gmail.com</string>
    <string name="user10_email">\@name10.surname@gmail.com</string>
    <string name="user1_residence">5295 Gaylord Walks Apk. 110</string>
    <string name="user2_residence">5295 Gaylord Walks Apk. 111</string>
    <string name="user3_residence">5295 Gaylord Walks Apk. 112</string>
    <string name="user4_residence">5295 Gaylord Walks Apk. 113</string>
    <string name="user5_residence">5295 Gaylord Walks Apk. 114</string>
    <string name="user6_residence">5295 Gaylord Walks Apk. 115</string>
    <string name="user7_residence">5295 Gaylord Walks Apk. 116</string>
    <string name="user8_residence">5295 Gaylord Walks Apk. 117</string>
    <string name="user9_residence">5295 Gaylord Walks Apk. 118</string>
    <string name="user10_residence">5295 Gaylord Walks Apk. 119</string>
    <string name="edit_profile">Edit profile</string>
    <string name="go_to_settings_and_fill_out_the_profile">Go to settings and fill out the profile</string>
    <string name="invalid_password">Your password must include a minimum of 8 characters.</string>
</resources>