<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.myprofile.MyProfileFragment">

    <View
        android:id="@+id/viewTopContainerMyProfile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/steel_gray"
        app:layout_constraintBottom_toTopOf="@id/viewBottomContainerMyProfile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.5"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_settings"
        style="@style/regular_text"
        android:layout_marginStart="@dimen/margin_normal_16dp"
        android:layout_marginTop="@dimen/margin_normal_16dp"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="@id/viewTopContainerMyProfile"
        app:layout_constraintTop_toTopOf="@id/viewTopContainerMyProfile" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_person_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_person_image"
        android:layout_width="@dimen/size_of_picture_108dp"
        android:layout_height="@dimen/size_of_picture_108dp"
        app:layout_constraintEnd_toEndOf="@id/viewTopContainerMyProfile"
        app:layout_constraintStart_toStartOf="@id/viewTopContainerMyProfile"
        app:layout_constraintTop_toTopOf="@id/guide_line_person_image"
        tools:src="@tools:sample/avatars" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_person_name"
        style="@style/person_name"
        android:layout_marginTop="@dimen/margin_top_person_name_24dp"
        android:text="@string/person_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_person_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_person_profession"
        style="@style/description_text"
        android:layout_marginTop="@dimen/margin_small_8dp"
        android:text="@string/profession_name"
        app:layout_constraintEnd_toEndOf="@id/text_view_person_name"
        app:layout_constraintStart_toStartOf="@id/text_view_person_name"
        app:layout_constraintTop_toBottomOf="@id/text_view_person_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_person_residence"
        style="@style/description_text"
        android:layout_marginTop="@dimen/margin_normal_16dp"
        android:text="@string/residence_address"
        app:layout_constraintEnd_toEndOf="@id/text_view_person_profession"
        app:layout_constraintStart_toStartOf="@id/text_view_person_profession"
        app:layout_constraintTop_toBottomOf="@id/text_view_person_profession" />


    <View
        android:id="@+id/viewBottomContainerMyProfile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/alabaster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTopContainerMyProfile"
        app:layout_constraintVertical_weight="0.5" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_socials_62dp"
        app:layout_constraintEnd_toEndOf="@id/viewBottomContainerMyProfile"
        app:layout_constraintStart_toStartOf="@id/viewBottomContainerMyProfile"
        app:layout_constraintTop_toTopOf="@+id/viewBottomContainerMyProfile">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonFacebook"
            style="@style/social_network_button"
            android:layout_marginEnd="@dimen/margin_end_socials_48dp"
            android:src="@drawable/main_facebook" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonLinkedin"
            style="@style/social_network_button"
            android:src="@drawable/main_linkedin" />


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonVkontakte"
            style="@style/social_network_button"
            android:layout_marginStart="@dimen/margin_start_socials_48dp"
            android:src="@drawable/main_vkontakte" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_edit_profile"
        style="@style/profile_button"
        android:layout_margin="@dimen/margin_normal_16dp"
        android:background="@drawable/round_corner_7dp"
        android:text="@string/edit_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/viewBottomContainerMyProfile"
        app:layout_constraintStart_toStartOf="@id/viewBottomContainerMyProfile" />



    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTopContainerMyProfile" />


</androidx.constraintlayout.widget.ConstraintLayout>