<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.contactProfile.ContactProfileFragment">

    <View
        android:id="@+id/viewTopContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/steel_gray"
        app:layout_constraintBottom_toTopOf="@id/viewBottomContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.5"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imageButtonExit"
        style="@style/ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/close_button_margin_start_21dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@id/textViewProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewProfile" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewProfile"
        style="@style/RegularText"
        android:layout_marginTop="@dimen/margin_normal_16dp"
        android:text="@string/profile"
        android:textSize="@dimen/text_size_normal_18sp"
        app:layout_constraintEnd_toEndOf="@id/viewTopContainer"
        app:layout_constraintStart_toStartOf="@id/viewTopContainer"
        app:layout_constraintTop_toTopOf="@id/viewTopContainer" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineUserImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/draweeViewUserImage"
        android:layout_width="@dimen/size_of_picture_113dp"
        android:layout_height="@dimen/size_of_picture_113dp"
        android:transitionName="contactPhoto"
        app:layout_constraintEnd_toEndOf="@id/viewTopContainer"
        app:layout_constraintStart_toStartOf="@id/viewTopContainer"
        app:layout_constraintTop_toTopOf="@id/guideLineUserImage"
        app:placeholderImageScaleType="fitXY"
        app:roundAsCircle="true"
        fresco:placeholderImage="@drawable/ic_default_user_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewUserName"
        style="@style/UserNameTextView"
        android:layout_marginTop="@dimen/margin_top_person_name_24dp"
        android:text="@string/default_person_name"
        android:transitionName="contactName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/draweeViewUserImage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewUserProfession"
        style="@style/DescriptionText"
        android:layout_marginTop="@dimen/margin_small_8dp"
        android:text="@string/default_profession_name"
        android:transitionName="contactProfession"
        app:layout_constraintEnd_toEndOf="@id/textViewUserName"
        app:layout_constraintStart_toStartOf="@id/textViewUserName"
        app:layout_constraintTop_toBottomOf="@id/textViewUserName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewUserResidence"
        style="@style/DescriptionText"
        android:layout_marginTop="@dimen/margin_normal_16dp"
        android:text="@string/default_residence_address"
        android:transitionName="contactResidence"
        app:layout_constraintEnd_toEndOf="@id/textViewUserProfession"
        app:layout_constraintStart_toStartOf="@id/textViewUserProfession"
        app:layout_constraintTop_toBottomOf="@id/textViewUserProfession" />

    <View
        android:id="@+id/viewBottomContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/alabaster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTopContainer"
        app:layout_constraintVertical_weight="0.5" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_socials_62dp"
        app:layout_constraintEnd_toEndOf="@id/viewBottomContainer"
        app:layout_constraintStart_toStartOf="@id/viewBottomContainer"
        app:layout_constraintTop_toTopOf="@+id/viewBottomContainer">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonFacebook"
            style="@style/SocialNetworkButton"
            android:layout_marginEnd="@dimen/margin_end_socials_48dp"
            android:src="@drawable/ic_main_facebook" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonLinkedin"
            style="@style/SocialNetworkButton"
            android:src="@drawable/ic_main_linkedin" />


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonVkontakte"
            style="@style/SocialNetworkButton"
            android:layout_marginStart="@dimen/margin_start_socials_48dp"
            android:src="@drawable/ic_main_vkontakte" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMessage"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_edit_profile_button_40dp"
        android:layout_marginHorizontal="@dimen/margin_normal_16dp"
        android:layout_marginBottom="@dimen/margin_bottom_edit_profile_button_12dp"
        android:background="@drawable/edit_profile"
        android:fontFamily="@font/open_sans"
        android:stateListAnimator="@null"
        android:text="@string/message"
        android:textAllCaps="false"
        android:textColor="@color/black_russian"
        android:textSize="@dimen/text_size_small_14sp"
        app:layout_constraintBottom_toTopOf="@id/buttonAddToMyContacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddToMyContacts"
        style="@style/ProfileButton"
        android:layout_margin="@dimen/margin_normal_16dp"
        android:background="@drawable/round_corner_7dp"
        android:text="@string/add_to_my_contacts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/viewBottomContainer"
        app:layout_constraintStart_toStartOf="@id/viewBottomContainer" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/contentLoadingProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>