<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutMainFragment"
    android:name="com.shpp.eorlov.assignment1.ui.mainfragment.MyFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mycontacts.MyContactsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutHeader"
        android:layout_width="0dp"
        android:layout_height="@dimen/header_height_117dp"
        android:background="@color/steel_gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonExit"
            style="@style/ImageButton"
            android:layout_marginStart="@dimen/close_button_margin_start_21dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="@id/textViewContacts"
            app:layout_constraintEnd_toStartOf="@+id/textViewContacts"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewContacts" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewContacts"
            style="@style/HeaderText"
            android:layout_marginTop="@dimen/contacts_text_margin_top_10dp"
            android:text="@string/contacts"
            android:textSize="@dimen/contacts_text_size_24sp"
            app:layout_constraintEnd_toStartOf="@id/imageButtonSearchButton"
            app:layout_constraintStart_toEndOf="@id/imageButtonExit"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonSearchButton"
            style="@style/ImageButton"
            android:layout_marginEnd="@dimen/search_button_margin_end_19dp"
            android:src="@drawable/ic_search_button"
            app:layout_constraintBottom_toBottomOf="@id/textViewContacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewContacts"
            app:layout_constraintTop_toTopOf="@id/textViewContacts" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewAddContacts"
            style="@style/HeaderText"
            android:layout_marginStart="@dimen/margin_normal_16dp"
            android:layout_marginBottom="@dimen/add_contacts_margin_bottom_26dp"
            android:text="@string/add_contacts"
            android:textSize="@dimen/text_size_small_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/contentLoadingProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMyContacts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_normal_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutHeader" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonGoUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/orange"
        app:tint="@android:color/white"
        android:contentDescription="@string/edit_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_arrow_upward_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonRemoveSelectedContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/orange"
        app:tint="@android:color/white"
        android:contentDescription="@string/edit_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_trash_bin_white"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>